Source/WebCore/platform/audio/mac/AudioSampleDataSource.h
@@ -73,6 +73,8 @@ public:
     void setMuted(bool muted) { m_muted = muted; }
     bool muted() const { return m_muted; }
 
+    const CAAudioStreamDescription* inputDescription() const { return m_inputDescription.get(); }
+
 #if !RELEASE_LOG_DISABLED
     const Logger& logger() const final { return m_logger; }
     const void* logIdentifier() const final { return m_logIdentifier; }
